k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobcrafto-ingress
  namespace: jobcrafto
  annotations:
    kubernetes.io/ingress.class: nginx
    # optional: increase timeouts, enable rewrite, etc.
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
